bug#58975 Make sure that buf_flush_list() is called at least once in the page_cleaner code path before we wait on buf_flush_wait_batch_end(). This ensures that buf_pool->no_flush[BUF_FLUSH_LIST] event will be set and the page_cleaner will not end up in infinite wait. This fix does that by changing the SRV_SHUTDOWN_CLEANUP while loop to a do..while loop.

approved by: Marko